--- a/2017-06-05.html
+++ b/2017-06-05.html
@@ -5,6 +5,19 @@
 	<title>Document</title>
 </head>
 <body>
+	<h4>sass中&符号的使用方法</h4>
+	&符号在sass中的意义用编程思维理解就是this的意思，可以理解为&就代表它的父级元素
+
+	<h4>图片转base64的好处</h4>
+	小的icon可以使用，减少HTTP请求，大的图片会导致数据太大加载过慢
+
+	<h4>Less快速入门</h4>
+	Less是一门CSS预处理语言，它扩充了CSS语言，增加了诸如变量、混合(mixin)、函数等功能，糖CSS更易维护、方便的制作主题、扩充。
+	<li>安装</li>
+	npm包管理器
+	$ npm install -g less
+	<li>命令行用法</li>
+	安装less后
 	
-</body>
+	</body>
 </html>
