--- a/2017-06-05.html
+++ b/2017-06-05.html
@@ -12,7 +12,7 @@
 	小的icon可以使用，减少HTTP请求，大的图片会导致数据太大加载过慢
 
 	<h4>Less快速入门</h4>
-	Less是一门CSS预处理语言，它扩充了CSS语言，增加了诸如变量、混合(mixin)、函数等功能，糖CSS更易维护、方便的制作主题、扩充。
+	Less是一门CSS预处理语言，它扩充了CSS语言，增加了诸如变量、混合(mixin)、函数等功能，让CSS更易维护、方便的制作主题、扩充。
 	<li>安装</li>
 	npm包管理器
 	$ npm install -g less
