--- a/center-test.html
+++ b/center-test.html
@@ -40,6 +40,34 @@
 			height: 40px;
 			background-color: #eee;
 		}
+		.div6{
+			width: 20%;
+			height: 20%;
+			background-color: #abc;
+			/*margin-top: 50%;*/
+			margin-left: 50%;
+			transform: translate(-50%,0);
+		}
+		.div7{
+			width: 200px;
+			height: 100px;
+			background-color: #add;
+			display: table;
+		}
+		.div8{
+			display: table-cell;
+			vertical-align: middle;
+		}
+		.div9{
+			width: 200px;
+			height: 200px;
+			background-color: #efe;
+			display: flex;
+			align-items: center;
+		}
+		.div10{
+			background-color: #fef;
+		}
 	</style>
 </head>
 <body>
@@ -48,6 +76,13 @@
 	<div class="div3">fixed、absolute定位</div>
 	<div class="div4">
 		<div class="div5">flex定位</div>
+	</div>
+	<div class="div6">本身宽度不确定的情况下</div>
+	<div class="div7">
+		<div class="div8">hahahh</div>
+	</div>
+	<div class="div9">
+		<div class="div10">ppp</div>
 	</div>
 </body>
 </html>
