--- a/BrowserTest.html
+++ b/BrowserTest.html
@@ -44,6 +44,9 @@
       }
     }
     console.log(navigator.userAgent);
+    window.onload=function(){
+      document.getElementById("version").innerHTML = getExploreName();
+    }
     </script>
 </body>
 </html>
