--- a/BrowserTest.html
+++ b/BrowserTest.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <script type="text/javascript">
-    alert(getExploreName());
+//     alert(getExploreName());
     function getExploreName(){
       var userAgent = navigator.userAgent.toLowerCase();
       if(userAgent.match(/opr/i)){ 
