--- a/BrowserTest.html
+++ b/BrowserTest.html
@@ -7,6 +7,8 @@
   <title>Document</title>
 </head>
 <body>
+  <h2 id="version"></h2>
+  <h2 id="userAgent"></h2>
   <script type="text/javascript">
 //     alert(getExploreName());
     function getExploreName(){
@@ -45,6 +47,7 @@
     }
     window.onload=function(){
       document.getElementById("version").innerHTML = getExploreName();
+      document.getElementById("userAgent").innerHTML = userAgent;
     }
     </script>
 </body>
